@@ -180,11 +180,11 @@ resetcolorstack(char * p, int outtops)
    if (q > cstack && outtops == 0) {
 #ifdef SHORTINT
      fprintf(stderr, "You've mistakenly made a global color change ");
-     fprintf(stderr, "to %s within nested colors\n", p);
+     fprintf_str(stderr, "to %s within nested colors\n", p);
      fprintf(stderr, "on page %ld. Will try to recover.\n", pagenum);
 #else   /* ~SHORTINT */
      fprintf(stderr, "You've mistakenly made a global color change ");
-     fprintf(stderr, "to %s within nested colors\n", p);
+     fprintf_str(stderr, "to %s within nested colors\n", p);
      fprintf(stderr, "on page %d. Will try to recover.\n", pagenum);
 #endif  /* ~SHORTINT */
    }
