@@ -3,6 +3,10 @@
 	* NEWS: Mention new/jfm feature.
 	* dospecial.c:
 	Output error of html special not to STDOUT but to STDERR.
+	* dvips.h, {bitmapenc,color,dopage,dospecial,download,dvips,
+	emspecial,finclude,fontdef,header,loadfont,output,pprescan,prescan,
+	resident,scanpage,search,t1part,virtualfont,writet1}.c:
+	Allow Unicode error messages on Windows console. (Windows only)
 
 2020-11-28  Akira Kakuto  <kakuto@w32tex.org>
 
